--- a/Responsive_Web_Design/1_Build_a_survey_form/BuildingSurveyForm.html
+++ b/Responsive_Web_Design/1_Build_a_survey_form/BuildingSurveyForm.html
@@ -8,9 +8,9 @@
   <body>
     <h1 id="title">Job Search Survey Form</h1>
     <p id="description">
-      Please take a moment to share your job search experience. Your feedback
-      will help us enhance our services to better meet your needs. The survey is
-      brief and should only take a few minutes. Thank you for your input!
+      <p>Please take a moment to share your job search experience. Your feedback
+      will help us enhance our services to better meet your needs.</p> 
+      <p>The survey is brief and should only take a few minutes. Thank you for your input! </p>
     </p>
     <form id="survey-form">
       <label id="name-label" for="name"
